--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/styled-components": "^4.1.19",
     "antd": "^3.23.4",
     "dotenv": "^8.1.0",
-    "masonry-layout": "^4.2.2",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
+    "react-infinite-scroller": "^1.2.4",
+    "react-lazy-load-image-component": "^1.3.2",
+    "react-masonry-component": "^6.2.1",
     "react-scripts": "3.1.2",
     "snoowrap": "^1.19.0",
     "styled-components": "^4.4.0",
