--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.9.1",
     "@types/styled-components": "^4.1.19",
     "antd": "^3.23.4",
+    "antd-mobile": "^2.3.1",
     "dotenv": "^8.1.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
