Renamed to kabbedit lmao

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Wabegami",
-  "name": "Wabegami",
+  "short_name": "Kabeddit",
+  "name": "Kabeddit",
   "description": "Reddit image gallery web app. Anime centered and great for wallpapers.",
   "icons": [
     {
