--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kabeddit",
+  "name": "kabeddit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +16,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-lazy-load-image-component": "^1.3.2",
     "react-masonry-component": "^6.2.1",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.1.2",
     "snoowrap": "^1.19.0",
     "styled-components": "^4.4.0",
