--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-lazy-load-image-component": "^1.3.2",
     "react-masonry-component": "^6.2.1",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.3.1",
+    "redux": "^4.0.5",
     "snoowrap": "^1.19.0",
     "styled-components": "^4.4.0",
     "typescript": "3.6.3"
