--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kabeddit",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.18",
@@ -10,6 +10,7 @@
     "@types/styled-components": "^4.1.19",
     "antd": "^3.23.4",
     "antd-mobile": "^2.3.1",
+    "axios": "^0.19.2",
     "dotenv": "^8.1.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
