--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "^3.3.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "snoowrap": "^1.19.0",
     "styled-components": "^4.4.0",
     "typescript": "3.6.3"
