--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Kabeddit",
-  "name": "Kabeddit",
+  "short_name": "Mango Wallpapers",
+  "name": "Mango Wallpapers",
   "description": "Reddit image gallery web app. Anime centered and great for wallpapers.",
   "icons": [
     {
